--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name": "DAX / iStats log",
+    "name": "IBL log",
     "version": "0.5.3",
-    "description": "Logs calls to DAX and iStats",
+    "description": "Logs calls to IBL",
     "options_page": "options.html",
     "permissions": ["webRequest", "webRequestBlocking", "*://*.bbc.co.uk/*", "activeTab", "storage"],
     "background": {
